fix conversation speaker alignment

--- a/css/responsive/desktop.styl
+++ b/css/responsive/desktop.styl
@@ -168,4 +168,3 @@ html
 #conversation-holder
   h3 
     font-size: $font-size-mid
-    left: -($margin-tiny)
