--- a/css/responsive/mobile-landscape.styl
+++ b/css/responsive/mobile-landscape.styl
@@ -39,4 +39,6 @@ html
 #conversation-holder
   h3 
     font-size: $font-size-mid
-    left: 12%
+    position: absolute
+    text-align: right 
+    right: 85%
