--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -175,4 +175,4 @@ html
 #conversation-holder
   h3 
     font-size: $font-size-mid
-    left: -($margin-tiny)
+    right: 100%
