--- a/css/site.styl
+++ b/css/site.styl
@@ -373,7 +373,7 @@ body
   position: relative
   h3 
     font-size: $font-size-mid
-    position: absolute
+    position: relative
 
 // ******************************************************
 
